{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 678,
  "lineage": "79560d4e-179b-3a86-b99c-e5dde086894a",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "hub_nva_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-apps-rg/providers/Microsoft.Network/networkInterfaces/hub-nva-nic",
            "internal_domain_name_suffix": "zkqjwnwtpp4ezfuq35pcodza0f.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "hub-nva",
                "primary": true,
                "private_ip_address": "10.0.0.36",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/dmz"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-A7-A0-CF",
            "name": "hub-nva-nic",
            "private_ip_address": "10.0.0.36",
            "private_ip_addresses": [
              "10.0.0.36"
            ],
            "resource_group_name": "hub-apps-rg",
            "tags": {
              "environment": "hub-nva"
            },
            "virtual_machine_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-apps-rg/providers/Microsoft.Compute/virtualMachines/hub-nva-vm"
          },
          "dependencies": [
            "azurerm_resource_group.hub_apps_rg",
            "azurerm_resource_group.hub_net_rg",
            "azurerm_subnet.hub_dmz",
            "azurerm_virtual_network.hub_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "office_nic_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/networkInterfaces/office-nic-1",
            "internal_domain_name_suffix": "wjrh2r4sdqvexhnzyncuammrvc.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "192.168.1.132",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/publicIPAddresses/office-vm-public-ip",
                "subnet_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/virtualNetworks/main-office-vnet/subnets/office-mgmt-subnet"
              }
            ],
            "location": "eastus",
            "mac_address": "7C-1E-52-14-0C-D5",
            "name": "office-nic-1",
            "private_ip_address": "192.168.1.132",
            "private_ip_addresses": [
              "192.168.1.132"
            ],
            "resource_group_name": "office-rg",
            "virtual_machine_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Compute/virtualMachines/office-vm"
          },
          "dependencies": [
            "azurerm_public_ip.office_vm_public_ip",
            "azurerm_resource_group.office_rg",
            "azurerm_subnet.office_mgmt_subnet",
            "azurerm_virtual_network.office_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "spoke1_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke1-rg/providers/Microsoft.Network/networkInterfaces/spoke1-vm-nic",
            "internal_domain_name_suffix": "gtgzazcaf5eehbkvy4ecj2x5od.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "spoke1-vm",
                "primary": true,
                "private_ip_address": "10.1.0.68",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke1-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt"
              }
            ],
            "location": "eastus",
            "mac_address": "60-45-BD-DB-4C-BB",
            "name": "spoke1-vm-nic",
            "private_ip_address": "10.1.0.68",
            "private_ip_addresses": [
              "10.1.0.68"
            ],
            "resource_group_name": "spoke1-rg",
            "virtual_machine_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke1-rg/providers/Microsoft.Compute/virtualMachines/spoke1-vm"
          },
          "dependencies": [
            "azurerm_resource_group.spoke1_rg",
            "azurerm_subnet.spoke1_mgmt",
            "azurerm_virtual_network.spoke1_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "spoke2_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": true,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke2-rg/providers/Microsoft.Network/networkInterfaces/spoke2-vm-nic",
            "internal_domain_name_suffix": "dttx0ptnd1cuva0m5yjq1xvxja.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "spoke2-vm",
                "primary": true,
                "private_ip_address": "10.2.0.68",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke2-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/mgmt"
              }
            ],
            "location": "eastus",
            "mac_address": "7C-1E-52-0C-5F-37",
            "name": "spoke2-vm-nic",
            "private_ip_address": "10.2.0.68",
            "private_ip_addresses": [
              "10.2.0.68"
            ],
            "resource_group_name": "spoke2-rg",
            "virtual_machine_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke2-rg/providers/Microsoft.Compute/virtualMachines/spoke2-vm"
          },
          "dependencies": [
            "azurerm_resource_group.spoke2_rg",
            "azurerm_subnet.spoke2_mgmt",
            "azurerm_virtual_network.spoke2_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "office_mgmt_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/networkSecurityGroups/office-mgmt-nsg",
            "location": "eastus",
            "name": "office-mgmt-nsg",
            "resource_group_name": "office-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "73.15.3.95",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "office"
            },
            "timeouts": null
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "security_rule"
              }
            ]
          ],
          "dependencies": [
            "azurerm_resource_group.office_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "hub_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/publicIPAddresses/hub-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.45.192.139",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "hub-public-ip",
            "resource_group_name": "hub-net-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Office pip"
            }
          },
          "dependencies": [
            "azurerm_resource_group.hub_net_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "office_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/publicIPAddresses/office-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "172.171.239.85",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "office-public-ip",
            "resource_group_name": "office-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Office public ip"
            }
          },
          "dependencies": [
            "azurerm_resource_group.office_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "office_vm_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/publicIPAddresses/office-vm-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.45.192.194",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "office-vm-public-ip",
            "resource_group_name": "office-rg",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "Office VM public ip"
            }
          },
          "dependencies": [
            "azurerm_resource_group.office_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "hub_gateway_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-apps-rg/providers/Microsoft.Network/routeTables/hub-gateway-rt",
            "location": "eastus",
            "name": "hub-gateway-rt",
            "resource_group_name": "hub-apps-rg",
            "route": [
              {
                "address_prefix": "10.0.0.0/16",
                "name": "toHub",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "10.1.0.0/16",
                "name": "toSpoke1",
                "next_hop_in_ip_address": "10.0.0.36",
                "next_hop_type": "VirtualAppliance"
              },
              {
                "address_prefix": "10.2.0.0/16",
                "name": "toSpoke2",
                "next_hop_in_ip_address": "10.0.0.36",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [],
            "tags": {
              "environment": "hub-nva"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub_apps_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "spoke1_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-apps-rg/providers/Microsoft.Network/routeTables/spoke1-rt",
            "location": "eastus",
            "name": "spoke1-rt",
            "resource_group_name": "hub-apps-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "10.2.0.0/16",
                "name": "toSpoke2",
                "next_hop_in_ip_address": "10.0.0.36",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke1-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt",
              "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke1-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/workload"
            ],
            "tags": {
              "environment": "hub-nva"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub_apps_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "spoke2_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-apps-rg/providers/Microsoft.Network/routeTables/spoke2-rt",
            "location": "eastus",
            "name": "spoke2-rt",
            "resource_group_name": "hub-apps-rg",
            "route": [
              {
                "address_prefix": "0.0.0.0/0",
                "name": "default",
                "next_hop_in_ip_address": "",
                "next_hop_type": "VnetLocal"
              },
              {
                "address_prefix": "10.1.0.0/16",
                "name": "toSpoke1",
                "next_hop_in_ip_address": "10.0.0.36",
                "next_hop_type": "VirtualAppliance"
              }
            ],
            "subnets": [
              "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke2-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/mgmt",
              "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke2-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/workload"
            ],
            "tags": {
              "environment": "hub-nva"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.hub_apps_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub_dmz",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.32/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/dmz",
            "name": "dmz",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hub-net-rg",
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub_net_rg",
            "azurerm_virtual_network.hub_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub_gateway_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.255.224/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hub-net-rg",
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub_net_rg",
            "azurerm_virtual_network.hub_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "hub_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.0.64/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/mgmt",
            "name": "mgmt",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "hub-net-rg",
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub_net_rg",
            "azurerm_virtual_network.hub_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "office_gateway_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.255.224/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/virtualNetworks/main-office-vnet/subnets/GatewaySubnet",
            "name": "GatewaySubnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "office-rg",
            "virtual_network_name": "main-office-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.office_rg",
            "azurerm_virtual_network.office_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "office_mgmt_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.1.128/25"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/virtualNetworks/main-office-vnet/subnets/office-mgmt-subnet",
            "name": "office-mgmt-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "office-rg",
            "virtual_network_name": "main-office-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.office_rg",
            "azurerm_virtual_network.office_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "office_user_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.10.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/virtualNetworks/main-office-vnet/subnets/office-user-subnet",
            "name": "office-user-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "office-rg",
            "virtual_network_name": "main-office-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.office_rg",
            "azurerm_virtual_network.office_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke1_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.0.64/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke1-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt",
            "name": "mgmt",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spoke1-rg",
            "virtual_network_name": "spoke1-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.spoke1_rg",
            "azurerm_virtual_network.spoke1_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke1_workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke1-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/workload",
            "name": "workload",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spoke1-rg",
            "virtual_network_name": "spoke1-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.spoke1_rg",
            "azurerm_virtual_network.spoke1_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke2_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.0.64/27"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke2-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/mgmt",
            "name": "mgmt",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spoke2-rg",
            "virtual_network_name": "spoke2-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.spoke2_rg",
            "azurerm_virtual_network.spoke2_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "spoke2_workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.2.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke2-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/workload",
            "name": "workload",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "spoke2-rg",
            "virtual_network_name": "spoke2-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.spoke2_rg",
            "azurerm_virtual_network.spoke2_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "office_mgmt_nsg_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/virtualNetworks/main-office-vnet/subnets/office-mgmt-subnet",
            "network_security_group_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/networkSecurityGroups/office-mgmt-nsg",
            "subnet_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/virtualNetworks/main-office-vnet/subnets/office-mgmt-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.office_mgmt_nsg",
            "azurerm_resource_group.office_rg",
            "azurerm_subnet.office_mgmt_subnet",
            "azurerm_virtual_network.office_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "hub_gateway_rt_hub_vnet_gateway_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet",
            "route_table_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-apps-rg/providers/Microsoft.Network/routeTables/hub-gateway-rt",
            "subnet_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet"
          },
          "dependencies": [
            "azurerm_resource_group.hub_apps_rg",
            "azurerm_resource_group.hub_net_rg",
            "azurerm_route_table.hub_gateway_rt",
            "azurerm_subnet.hub_gateway_subnet",
            "azurerm_virtual_network.hub_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "spoke1_rt_spoke1_vnet_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke1-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt",
            "route_table_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-apps-rg/providers/Microsoft.Network/routeTables/spoke1-rt",
            "subnet_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke1-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt"
          },
          "dependencies": [
            "azurerm_resource_group.hub_apps_rg",
            "azurerm_resource_group.spoke1_rg",
            "azurerm_route_table.spoke1_rt",
            "azurerm_subnet.spoke1_mgmt",
            "azurerm_virtual_network.spoke1_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "spoke1_rt_spoke1_vnet_workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke1-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/workload",
            "route_table_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-apps-rg/providers/Microsoft.Network/routeTables/spoke1-rt",
            "subnet_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke1-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/workload"
          },
          "dependencies": [
            "azurerm_resource_group.hub_apps_rg",
            "azurerm_resource_group.spoke1_rg",
            "azurerm_route_table.spoke1_rt",
            "azurerm_subnet.spoke1_workload",
            "azurerm_virtual_network.spoke1_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "spoke2_rt_spoke2_vnet_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke2-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/mgmt",
            "route_table_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-apps-rg/providers/Microsoft.Network/routeTables/spoke2-rt",
            "subnet_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke2-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/mgmt"
          },
          "dependencies": [
            "azurerm_resource_group.hub_apps_rg",
            "azurerm_resource_group.spoke2_rg",
            "azurerm_route_table.spoke2_rt",
            "azurerm_subnet.spoke2_mgmt",
            "azurerm_virtual_network.spoke2_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "spoke2_rt_spoke2_vnet_workload",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke2-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/workload",
            "route_table_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-apps-rg/providers/Microsoft.Network/routeTables/spoke2-rt",
            "subnet_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke2-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/workload"
          },
          "dependencies": [
            "azurerm_resource_group.hub_apps_rg",
            "azurerm_resource_group.spoke2_rg",
            "azurerm_route_table.spoke2_rt",
            "azurerm_subnet.spoke2_workload",
            "azurerm_virtual_network.spoke2_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "hub_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "369ba0ca-7bd3-4cfc-9690-efde270f20d5",
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet",
            "location": "eastus",
            "name": "hub-vnet",
            "resource_group_name": "hub-net-rg",
            "subnet": [
              {
                "address_prefix": "10.0.0.32/27",
                "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/dmz",
                "name": "dmz"
              },
              {
                "address_prefix": "10.0.0.64/27",
                "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/mgmt",
                "name": "mgmt"
              },
              {
                "address_prefix": "10.0.255.224/27",
                "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              }
            ],
            "tags": {
              "environment": "hub-spoke"
            }
          },
          "dependencies": [
            "azurerm_resource_group.hub_net_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "office_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "477e62b2-1cd2-4b2a-9db9-c345403191aa",
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/virtualNetworks/main-office-vnet",
            "location": "eastus",
            "name": "main-office-vnet",
            "resource_group_name": "office-rg",
            "subnet": [
              {
                "address_prefix": "192.168.1.128/25",
                "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/virtualNetworks/main-office-vnet/subnets/office-mgmt-subnet",
                "name": "office-mgmt-subnet",
                "security_group": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/networkSecurityGroups/office-mgmt-nsg"
              },
              {
                "address_prefix": "192.168.10.0/24",
                "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/virtualNetworks/main-office-vnet/subnets/office-user-subnet",
                "name": "office-user-subnet"
              },
              {
                "address_prefix": "192.168.255.224/27",
                "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/virtualNetworks/main-office-vnet/subnets/GatewaySubnet",
                "name": "GatewaySubnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.office_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke1_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "6490cd34-2f40-43c8-8555-c78824f2ff73",
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke1-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet",
            "location": "eastus",
            "name": "spoke1-vnet",
            "resource_group_name": "spoke1-rg",
            "subnet": [
              {
                "address_prefix": "10.1.0.64/27",
                "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke1-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/mgmt",
                "name": "mgmt"
              },
              {
                "address_prefix": "10.1.1.0/24",
                "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke1-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/workload",
                "name": "workload"
              }
            ],
            "tags": {
              "environment": "spoke1"
            }
          },
          "dependencies": [
            "azurerm_resource_group.spoke1_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "spoke2_vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.2.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3e7de71c-1e6d-4ac5-834c-fe130ddeb748",
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke2-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet",
            "location": "eastus",
            "name": "spoke2-vnet",
            "resource_group_name": "spoke2-rg",
            "subnet": [
              {
                "address_prefix": "10.2.0.64/27",
                "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke2-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/mgmt",
                "name": "mgmt"
              },
              {
                "address_prefix": "10.2.1.0/24",
                "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke2-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/workload",
                "name": "workload"
              }
            ],
            "tags": {
              "environment": "spoke2"
            }
          },
          "dependencies": [
            "azurerm_resource_group.spoke2_rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "hub_vnet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_route_translation_for_nat_enabled": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "10.0.255.254"
                    ],
                    "ip_configuration_name": "vnetGatewayConfig",
                    "tunnel_ip_addresses": [
                      "104.45.192.139"
                    ]
                  }
                ]
              }
            ],
            "dns_forwarding_enabled": false,
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/virtualNetworkGateways/hub-vpn-gateway1",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/publicIPAddresses/hub-public-ip",
                "subnet_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/GatewaySubnet"
              }
            ],
            "ip_sec_replay_protection_enabled": true,
            "location": "eastus",
            "name": "hub-vpn-gateway1",
            "private_ip_address_enabled": false,
            "remote_vnet_traffic_enabled": false,
            "resource_group_name": "hub-net-rg",
            "sku": "VpnGw1",
            "type": "Vpn",
            "virtual_wan_traffic_enabled": false,
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.hub_public_ip",
            "azurerm_resource_group.hub_net_rg",
            "azurerm_subnet.hub_gateway_subnet",
            "azurerm_virtual_network.hub_vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway",
      "name": "office_vpn_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "active_active": false,
            "bgp_route_translation_for_nat_enabled": false,
            "bgp_settings": [
              {
                "asn": 65515,
                "peer_weight": 0,
                "peering_addresses": [
                  {
                    "default_addresses": [
                      "192.168.255.254"
                    ],
                    "ip_configuration_name": "vnetGatewayConfig",
                    "tunnel_ip_addresses": [
                      "172.171.239.85"
                    ]
                  }
                ]
              }
            ],
            "dns_forwarding_enabled": false,
            "enable_bgp": false,
            "generation": "Generation1",
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/virtualNetworkGateways/office-vpn-gateway1",
            "ip_configuration": [
              {
                "name": "vnetGatewayConfig",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/publicIPAddresses/office-public-ip",
                "subnet_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/virtualNetworks/main-office-vnet/subnets/GatewaySubnet"
              }
            ],
            "ip_sec_replay_protection_enabled": true,
            "location": "eastus",
            "name": "office-vpn-gateway1",
            "private_ip_address_enabled": false,
            "remote_vnet_traffic_enabled": false,
            "resource_group_name": "office-rg",
            "sku": "VpnGw1",
            "type": "Vpn",
            "virtual_wan_traffic_enabled": false,
            "vpn_type": "RouteBased"
          },
          "dependencies": [
            "azurerm_public_ip.office_public_ip",
            "azurerm_resource_group.office_rg",
            "azurerm_subnet.office_gateway_subnet",
            "azurerm_virtual_network.office_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "hub_office_conn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 0,
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/connections/hub-office-conn",
            "local_azure_ip_address_enabled": false,
            "location": "eastus",
            "name": "hub-office-conn",
            "peer_virtual_network_gateway_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/virtualNetworkGateways/office-vpn-gateway1",
            "resource_group_name": "hub-net-rg",
            "routing_weight": 1,
            "shared_key": "MbE5CZsZPWQbnkWxYGGuCNHVhWnyKEGPZM7kFFjJdc2BMj3KTPEX5h4Gc5tZGif7SxGDpdMkxVmB8P48kn6",
            "type": "Vnet2Vnet",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/virtualNetworkGateways/hub-vpn-gateway1"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "shared_key"
              }
            ]
          ],
          "dependencies": [
            "azurerm_public_ip.hub_public_ip",
            "azurerm_public_ip.office_public_ip",
            "azurerm_resource_group.hub_net_rg",
            "azurerm_resource_group.office_rg",
            "azurerm_subnet.hub_gateway_subnet",
            "azurerm_subnet.office_gateway_subnet",
            "azurerm_virtual_network.hub_vnet",
            "azurerm_virtual_network.office_network",
            "azurerm_virtual_network_gateway.hub_vnet_gateway",
            "azurerm_virtual_network_gateway.office_vpn_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_gateway_connection",
      "name": "office_hub_conn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connection_mode": "Default",
            "connection_protocol": "IKEv2",
            "dpd_timeout_seconds": 0,
            "enable_bgp": false,
            "express_route_gateway_bypass": false,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/connections/office-hub-conn",
            "local_azure_ip_address_enabled": false,
            "location": "eastus",
            "name": "office-hub-conn",
            "peer_virtual_network_gateway_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/virtualNetworkGateways/hub-vpn-gateway1",
            "resource_group_name": "hub-net-rg",
            "routing_weight": 1,
            "shared_key": "MbE5CZsZPWQbnkWxYGGuCNHVhWnyKEGPZM7kFFjJdc2BMj3KTPEX5h4Gc5tZGif7SxGDpdMkxVmB8P48kn6",
            "type": "Vnet2Vnet",
            "use_policy_based_traffic_selectors": false,
            "virtual_network_gateway_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/office-rg/providers/Microsoft.Network/virtualNetworkGateways/office-vpn-gateway1"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "shared_key"
              }
            ]
          ],
          "dependencies": [
            "azurerm_public_ip.hub_public_ip",
            "azurerm_public_ip.office_public_ip",
            "azurerm_resource_group.hub_net_rg",
            "azurerm_resource_group.office_rg",
            "azurerm_subnet.hub_gateway_subnet",
            "azurerm_subnet.office_gateway_subnet",
            "azurerm_virtual_network.hub_vnet",
            "azurerm_virtual_network.office_network",
            "azurerm_virtual_network_gateway.hub_vnet_gateway",
            "azurerm_virtual_network_gateway.office_vpn_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub_spoke1_peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/virtualNetworkPeerings/hub-spoke1-peer",
            "name": "hub-spoke1-peer",
            "remote_virtual_network_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke1-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet",
            "resource_group_name": "hub-net-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_public_ip.hub_public_ip",
            "azurerm_resource_group.hub_net_rg",
            "azurerm_resource_group.spoke1_rg",
            "azurerm_subnet.hub_gateway_subnet",
            "azurerm_virtual_network.hub_vnet",
            "azurerm_virtual_network.spoke1_vnet",
            "azurerm_virtual_network_gateway.hub_vnet_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "hub_spoke2_peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": true,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet/virtualNetworkPeerings/hub-spoke2-peer",
            "name": "hub-spoke2-peer",
            "remote_virtual_network_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke2-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet",
            "resource_group_name": "hub-net-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_public_ip.hub_public_ip",
            "azurerm_resource_group.hub_net_rg",
            "azurerm_resource_group.spoke2_rg",
            "azurerm_subnet.hub_gateway_subnet",
            "azurerm_virtual_network.hub_vnet",
            "azurerm_virtual_network.spoke2_vnet",
            "azurerm_virtual_network_gateway.hub_vnet_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spoke1_hub_peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke1-rg/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/virtualNetworkPeerings/spoke1-hub-peer",
            "name": "spoke1-hub-peer",
            "remote_virtual_network_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet",
            "resource_group_name": "spoke1-rg",
            "use_remote_gateways": true,
            "virtual_network_name": "spoke1-vnet"
          },
          "dependencies": [
            "azurerm_public_ip.hub_public_ip",
            "azurerm_resource_group.hub_net_rg",
            "azurerm_resource_group.spoke1_rg",
            "azurerm_subnet.hub_gateway_subnet",
            "azurerm_virtual_network.hub_vnet",
            "azurerm_virtual_network.spoke1_vnet",
            "azurerm_virtual_network_gateway.hub_vnet_gateway"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "spoke2_hub_peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/spoke2-rg/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/virtualNetworkPeerings/spoke2-hub-peer",
            "name": "spoke2-hub-peer",
            "remote_virtual_network_id": "/subscriptions/a8ae1b18-88ff-45ed-927d-8a3a20fc8cd1/resourceGroups/hub-net-rg/providers/Microsoft.Network/virtualNetworks/hub-vnet",
            "resource_group_name": "spoke2-rg",
            "use_remote_gateways": true,
            "virtual_network_name": "spoke2-vnet"
          },
          "dependencies": [
            "azurerm_public_ip.hub_public_ip",
            "azurerm_resource_group.hub_net_rg",
            "azurerm_resource_group.spoke2_rg",
            "azurerm_subnet.hub_gateway_subnet",
            "azurerm_virtual_network.hub_vnet",
            "azurerm_virtual_network.spoke2_vnet",
            "azurerm_virtual_network_gateway.hub_vnet_gateway"
          ]
        }
      ]
    }
  ]
}